<resources>
    <string name="app_name">Newborn Nap Tracker</string>
    <string name="action_settings">Baby Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Newborn Nap Tracker</string>
    <string name="add_nap_fragment_label">Add Nap</string>
    <string name="sound_machine_fragment_label">Sound Machine</string>

    <!-- Buttons -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add">Add</string>
    <string name="show_image">Show</string>
    <string name="hide_image">Hide</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="exit">Exit</string>
    <string name="open_sound_machine">Open Sound Machine</string>
    <string name="sleep_cycle">Sleep Cycle</string>
    <string name="track_sleep">Calculate</string>

    <string name="no_naps_scheduled">No naps scheduled yet. Use the Sleep Cycle button to plan naps.</string>

    <!-- Sounds -->
    <string-array name="sound_list">
        <item>Lullaby</item>
        <item>Rain</item>
    </string-array>

    <!-- Text -->
    <string name="title_activity_sound_machine">MusicPlayerActivity</string>
    <string name="invalid_time_format">Invalid time format</string>
    <string name="next_predicted_sleep_time">The next sleep time after that will likely be: %1$s</string>
    <string name="and_then_sleep_time">And then after that around: %1$s</string>
    <string name="sleep_cycle_question">What time did your baby fall asleep?</string>
    <string name="next_recommended_sleep_time">Start looking for sleepy cues at %1$s</string>
    <string name="add_nap_description">Tap a date to add a nap to your calendar. This helps you track your baby\'s sleep schedule alongside your daily plans.</string>

    <!--  -->
    <string name="sound_machine">Sound Machine</string>
    <string name="view_calendar">View Calendar</string>
    <string name="home">Home</string>
    <string name="album_art">Album Art</string>
    <string name="sound_name">Sound Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="_0_00">0:00</string>
    <string name="album">ALBUM</string>
    <string name="album_title">Sleeping Baby Collection</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sound_list_fragment_label">Sounds</string>
    <string name="save">Save</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="years">Years</string>
    <string name="months">Months</string>
    <string name="slider_text">How many different babies should we track naps for?</string>
    <string name="slider">This is a slider</string>
    <string name="title_text">Predicted nap times for today:</string>
    <string name="use_sleep_cycle">Please use Sleep Cycle to get nap predictions.</string>
    <string name="nap_predictions"><![CDATA[
        <b>Nap Predictions</b>
    ]]></string>
    <string name="no_nap_predictions">No nap predictions available. Please use Sleep Cycle to add nap data.</string>
    <string name="empty" />
    <string name="intro_message"><![CDATA[
        <br><br><br><br>Welcome!<br><br><br><br>
        The <b><u>Sleep Cycle</u></b> tab will help you get predictions on when your baby will need their next nap.<br><br><br><br>
        The <b><u>Add Nap</u></b> tab will let you add a more detailed nap to track alongside your Google Calendar.<br><br><br><br>
        And finally, the <b><u>Sound Machine</u></b> tab can assist you in helping your baby fall asleep.
    ]]></string>
</resources>