<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <Spinner
        android:id="@+id/sound_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/sound_list"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/play_button"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play"
        app:layout_constraintTop_toBottomOf="@id/sound_spinner"
        android:layout_gravity="bottom" />

    <Button
        android:id="@+id/pause_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        app:layout_constraintTop_toBottomOf="@id/play_button"
        android:layout_gravity="bottom"/>

    <Button
        android:id="@+id/stop_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        app:layout_constraintTop_toBottomOf="@id/pause_button"
        android:layout_gravity="bottom" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        app:layout_constraintTop_toBottomOf="@id/stop_button"
        android:layout_gravity="bottom" />


</androidx.constraintlayout.widget.ConstraintLayout>