<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/black"
    android:padding="16dp">

    <ImageView
        android:id="@+id/album_art_mini"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_music_note"
        android:contentDescription="@string/album_art"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/song_name_mini"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/song_name"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@id/album_art_mini"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/play_pause_button_mini"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/artist_name_mini"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/artist_name"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@id/album_art_mini"
        app:layout_constraintTop_toBottomOf="@id/song_name_mini"
        app:layout_constraintEnd_toStartOf="@id/play_pause_button_mini"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <ImageButton
        android:id="@+id/play_pause_button_mini"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_play"
        android:contentDescription="@string/play"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:tint="@android:color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>